La till event sida och påbörjat join sida

--- a/ASP_inlamning1/Pages/Index.cshtml
+++ b/ASP_inlamning1/Pages/Index.cshtml
@@ -5,6 +5,12 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Välkommen!</h1>
+    <p>På den här sidan kan du hitta alla dom hetaste eventen runt om i sverige! Vi har samarbete med dom största
+    party bolagen samt krogar på den svenska marknaden för att erbjuda dig den smidigaste och enklaste lösningen att 
+    boka in dig på olika event.</p>
+</div>
+<div class="text-center">
+    <button >Login</button>
+    <button>Register</button>
 </div>
