join sida tillagd

--- a/ASP_inlamning1/Pages/Join.cshtml
+++ b/ASP_inlamning1/Pages/Join.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model ASP_inlamning1.Pages.JoinModel
+@model ASP_inlamning1.Pages.joinModel
 
 @{
-    ViewData["Title"] = "Join";
+    ViewData["Title"] = "join";
 }
 
-<h1>Join</h1>
+<h1>join</h1>
 
 <div>
     <h4>Event</h4>
