--- a/ASP_inlamning1/Pages/Join.cshtml
+++ b/ASP_inlamning1/Pages/Join.cshtml
@@ -9,73 +9,46 @@
 
 <h4>Event</h4>
 <hr />
+@if (Model.Joined == false)
+{
+    <div class="card text-center align-self-center" style="width: 40rem;">
+        <div class="card-body">
 
-<div class="card " style="width: 40rem;">
-    <div class="card-body">
-
-        <h5 class="card-title">@Html.DisplayNameFor(model => model.Event.title) @Html.DisplayFor(model => model.Event.title)</h5>
-        <p class="card-text text-center">@Html.DisplayFor(model => model.Event.description)</p>
-        <p></p>
+            <h5 class="card-title">@Html.DisplayNameFor(model => model.Event.title) @Html.DisplayFor(model => model.Event.title)</h5>
+            <p class="card-text text-center">@Html.DisplayFor(model => model.Event.description)</p>
+            <p></p>
+        </div>
     </div>
-</div>
-<br>
+    <br>
 
-<div>
-    <form method="post">
-        <input type="submit">
-    </form>
-</div>>
+    <div class="align-self-center">
+        <form method="post">
+            <input class="btn btn-success" type="submit" value="Join">
+        </form>
+    </div>
+}
+
+@if(Model.Joined == true) 
+    {
+            <div class="card " style="width: 40rem;">
+                <div class="card-body">
+
+                    <h5 class="card-title">@Html.DisplayNameFor(model => model.Event.title) @Html.DisplayFor(model => model.Event.title)</h5>
+                    <p class="card-text text-center">@Html.DisplayFor(model => model.Event.description)</p>
+                    <p></p>
+                </div>
+            </div>
+            <br>
+
+            <div class="text-center">
+                <h3 class="text-center">Succesfully joined! </h3>
+                <a asp-page="Events">View more events</a>
+                <a asp-page="JoinedEvents">View Your events</a>
+            </div>
+    }
 
 
-<div>
-    <h4>Event</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Event.title)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Event.title)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Event.organizer_id)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Event.organizer_id)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Event.description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Event.description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Event.place)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Event.place)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Event.address)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Event.address)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Event.date)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Event.date)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Event.spots_avalible)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Event.spots_avalible)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Event.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>
+
+
+
+
