--- a/ASP_inlamning1/Pages/Index.cshtml
+++ b/ASP_inlamning1/Pages/Index.cshtml
@@ -5,12 +5,12 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Välkommen!</h1>
-    <p>På den här sidan kan du hitta alla dom hetaste eventen runt om i sverige! Vi har samarbete med dom största
+    <h1 class="display-4 mb-5">Välkommen!</h1>
+    <p class="mb-5">På den här sidan kan du hitta alla dom hetaste eventen runt om i sverige! Vi har samarbete med dom största
     party bolagen samt krogar på den svenska marknaden för att erbjuda dig den smidigaste och enklaste lösningen att 
     boka in dig på olika event.</p>
 </div>
 <div class="text-center">
-    <button >Login</button>
-    <button>Register</button>
+    <button class="btn btn-success btn-lg" >Login</button>
+    <button class="btn btn-primary btn-lg">Register</button>
 </div>
