design join sida

--- a/ASP_inlamning1/Pages/Index.cshtml
+++ b/ASP_inlamning1/Pages/Index.cshtml
@@ -13,4 +13,6 @@
 <div class="text-center">
     <button class="btn btn-success btn-lg" >Login</button>
     <button class="btn btn-primary btn-lg">Register</button>
+    <br />
+    <p>Redan inloggad med en developer User: Jakob</p>
 </div>
