--- a/ASP_inlamning1/Pages/Shared/_Layout.cshtml
+++ b/ASP_inlamning1/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Events">Event</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/JoinedEvents">MyEvents</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
